--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "resolveJsonModule": true,
     "declaration": true,
     "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noUnusedParameters": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
