--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
     "forceConsistentCasingInFileNames": true,
     "noUnusedParameters": false
   },
+  "ts-node": {
+    "files": true
+  },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
